Fix PMD tests